[package]
name = "steam_wrapper"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest = { version = "0.11.22", features = ["json"] }
serde = { version = "1.0.192", features = ["derive"] }
serde_json = "1.0.108"
tokio  = { version = "1.33.0", features = ["full"] }
anyhow = "1.0.79"
dotenv = "0.15.0"
